# postmodern-python-ci

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/postmodern_ci/: __init__.py
src/postmodern_python_ci/: __init__.py
