[project]
name = "postmodern-python-ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathan McDougall", email = "nathan.j.mcdougall@gmail.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "coverage[toml]>=7.6.4",
    "pre-commit>=4.0.1",
    "pytest-cov>=5.0.0",
    "pytest-md>=0.2.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "usethis",
]

[tool.uv.sources]
usethis = { path = "../usethis-python" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ["src"]
omit = ["*/pytest-of-*/*"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = [
    "C4",
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "I",
    "PLE",
    "PLR",
    "PT",
    "RUF",
    "SIM",
    "UP",
]
